# genjax-bootstrap

./: .gitignore  README.md  bootstrap.sh  install.sh  pyproject.toml
notebooks/: demo.ipynb
scripts/: check-auth.sh  gh-repo-create.sh
src/frochi/: demo.py
tests/: test_frochi.py
tmp/foo/: pyproject.toml
