[project]
name = "frochi"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Aaron Steele", email = "eightysteele@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = ["https://oauth2accesstoken@us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple"]

[tool.pixi.pypi-dependencies]
frochi = { path = ".", editable = true }

[tool.pixi.tasks]
auth-check = {cmd = "check-auth.sh", cwd = "scripts", description = "ensures that you're authenticated to google artifact registry" }

[tool.pixi.dependencies]
#jaxtyping = ">=0.2.28"
#beartype = ">=0.18.5"
#deprecated = ">=1.2.14"

[tool.pixi.feature.dev.dependencies]
nbmake = ">=1.4.6"
pytest = ">=7.2.0"
ruff = ">=0.1.3"
jupyterlab = ">=4.1.6"
jupytext = ">=1.16.2"

[tool.pixi.feature.dev.tasks]
demo = { cmd = "python demo.py", cwd = "src/frochi", description = "run genjax demo" }
notebook = { cmd = "jupyter lab --ip=0.0.0.0 --allow-root notebooks/demo.ipynb", description = "run notebooks" }
test = { cmd = "pytest --ignore notebooks tests", description = "run tests" }

[tool.pixi.target.osx-arm64]
build-dependencies = { scipy = { version = "1.14.0.*" }, numpy = { version = "1.26.4.*" } }

[tool.pixi.environments]
default = { solve-group = "default" }
cpu = ["cpu", "dev"]
cuda = ["cuda", "dev"]

[tool.pixi.feature.cpu]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.cpu.pypi-dependencies]
jax = { version = ">=0.4.28", extras = ["cpu"] }
genjax = "*"
genstudio = "*"
tensorflow-probability = ">=0.23.0"
penzai = ">=0.1.1"
msgpack = ">=1.0.8"

[tool.pixi.feature.cuda]
platforms = ["linux-64", "osx-arm64"]
system-requirements = { cuda = "12.4" }

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
jax = { version = ">=0.4.28", extras = ["cuda12"] }
genjax = "*"
genstudio = "*"
tensorflow-probability = ">=0.23.0"
penzai = ">=0.1.1"
msgpack = ">=1.0.8"

[tool.pyright]
venvPath = "."
venv = ".pixi"
pythonVersion = "3.12.3"
include = ["src", "notebooks"]

[tool.ruff.format]
exclude = ["notebooks/demo.py"]

[tool.ruff.lint.per-file-ignores]
"notebooks/intro.py" = ["E999"]

[tool.jupytext]
formats = "ipynb,py:percent"
