[project]
name = "frochi"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "You", email = "you@frochi.com" }]
requires-python = ">= 3.11"
dependencies = ["genjax", "genstudio"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

# ------------------------------------------------------------------------------
# default feature

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = [
    "https://oauth2accesstoken@us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple",
]

[tool.pixi.pypi-dependencies]
frochi = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.12"
nbmake = ">=1.4.6"
pytest = ">=7.2.0"
ruff = ">=0.1.3"
jupyterlab = ">=4.1.6"
jupytext = ">=1.16.2"
pixi-kernel = ">=0.3.0,<0.4"

[tool.pixi.target.unix.dependencies]
jax = ">=0.4.28"
jaxlib = ">=0.4.28"

#[tool.pixi.target.linux-64.pypi-dependencies]
#jax = ">=0.4.28"
#jaxlib = { version = ">=0.4.28", extras = ["cpu"] }

[tool.pixi.target.win-64.pypi-dependencies]
jax = { version = ">=0.4.28", extras = ["cpu"] }
jaxlib = ">=0.4.28"

[tool.pixi.target.osx-arm64]
build-dependencies = { scipy = { version = "1.14.0.*" }, numpy = { version = "1.26.4.*" } }

[tool.pixi.tasks]
gh-create-repo = { cmd = "gh-repo-create.sh", cwd = "scripts", description = "turns the project into a new github repo" }

# ------------------------------------------------------------------------------
# gen feature

#[tool.pixi.feature.gen.pypi-dependencies]
#genjax = "*"
#genstudio = "*"

# ------------------------------------------------------------------------------
# dev feature

[tool.pixi.feature.dev.tasks]
 demo = { cmd = "python demo.py", cwd = "src/frochi", description = "runs the genjax demo" }
 notebook = { cmd = "jupyter lab --ip=0.0.0.0 --allow-root notebooks/demo.ipynb", description = "runs jupyter labs in a browser" }

# ------------------------------------------------------------------------------
# cuda feature

[tool.pixi.feature.cuda]
platforms = ["linux-64", "osx-arm64"]
system-requirements = { cuda = "12" }

[tool.pixi.feature.cuda.target.linux-64.dependencies]
jax = ">=0.4.28"
jaxlib = { version = ">=0.4.28", build = "cuda12*" }

# ------------------------------------------------------------------------------
# test feature

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest --ignore notebooks tests", description = "run tests" }

# ------------------------------------------------------------------------------
# environments

[tool.pixi.environments]
cuda = {features = ["cuda"], solve-group = "cuda"}
cpu = {features = ["test", "dev"], solve-group = "default"}
gpu = {features = ["test", "cuda", "dev"], solve-group = "cuda"}

# ------------------------------------------------------------------------------
# tool configurations

[tool.pyright]
venvPath = "."
venv = ".pixi"
pythonVersion = "3.12.3"
include = ["src", "notebooks"]

[tool.ruff.format]
exclude = ["notebooks/demo.py"]

[tool.ruff.lint.per-file-ignores]
"notebooks/intro.py" = ["E999"]

[tool.jupytext]
formats = "ipynb,py:percent"
