[project]
name = "foo"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Aaron Steele", email = "eightysteele@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = ["https://oauth2accesstoken@us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple"]

[tool.pixi.pypi-dependencies]
foo = { path = ".", editable = true }

[tool.pixi.tasks]
